# rufm

./: Cargo.toml  Readme.md  TODO.md  TODO.txt
config/: config.ini
src/: \  action.rs  actions.rs  cmd.rs  config.rs  main.rs  widgets.rs
src/actions/: actions.rs  mod.rs  traits.rs
src/config/: config.rs  mod.rs  structs.rs
src/widgets/: favourites.rs  list.rs  mod.rs  preview.rs  render.rs  traits.rs
src/widgets/lists/: favourites.rs  files.rs  mod.rs
src/widgets/paragraphs/: info.rs  mod.rs  preview.rs  search.rs
