[package]
name = "rufm"
version = "0.1.0"
authors = ["Finn Hediger <finn.hediger@thurweb.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for drawing
# the user interface
tui = "0.9.3"
termion = "1.5.5"

# for reading 
# the toml config file
toml = "0.5.6"
serde = "1.0.110"
serde_derive = "1.0.110"
